completed part 1 of lab03

--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
   <header>
     <h1>About Me</h1>
   </header>
+  <br>
+  <br>
   <p>My name is Rey Oliva. I'm 25 years old and grew up in Tampa, FL. I moved to Seattle in August 2020 after graduating from the University of Florida with a degree in Computer Science Engineering. I began working for Facebook as an iOS engineer on the News Feed in September of 2020 and worked there for 2 years. This is my first week at CodeFellows as an instructor. My goal is to learn how to be a great instructor for 201 from Audrey and feedback from our students.</p>
+  <br>
+  <br>
+  <h2>Education and Work Experience</h2>
+  <ul style="list-style-type:disc">
+    <li> University of Florida - Herbert Wertheim College of Engineering - Bachelor of Science in Computer Science Cum Laude - May 2020 </li>
+    <li>Facebook University Intern, Menlo Park, CA, June 2017 - August 2017</li>
+    <li>Facebook Messenger RTC Intern, Seattle, WA, May 2018 - August 2018</li>
+    <li>Facebook News Feed Experience Intern, Seattle, WA, May 2019 - August 2019</li>
+    <li>Facebook News Feed Experience iOS Engineer, Seattle, WA, September 2020 - April 2022</li>
+    <li>CodeFellows Lead Instructor, Seattle, WA, September 2022 - Present</li>
+  </ul>
+  <br>
+  <br>
+  <h2>Top 10 Most Used Apps on My Phone</h2>
+  <ol type="1">
+    <li>iMessage</li>
+    <li>Spotify</li>
+    <li>Twitter</li>
+    <li>Things</li>
+    <li>Chrome</li>
+    <li>Google Calendar</li>
+    <li>Snapshat</li>
+    <li>Wordle</li>
+    <li>Pokemon GO</li>
+    <li>TikTok</li>
+  </ol>
   <script src="js/app.js"></script>
 </body>
 </html>
